[package]
name = "slang-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-extra = "0.9.3"
futures-util = "0.3.30"
mime_guess = "2.0.5"
rust-embed = "8.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
slang.workspace = true
# smtlib = "0.2.0"
smtlib = { path = "../../../smtlib-rs/smtlib" }
# tapi = { git = "https://github.com/oeb25/tapi", version = "0.1.0", features = ["endpoints"] }
tapi = { path = "../../../Checkr/tapi/crates/tapi", version = "0.1.0", features = [
    "endpoints",
] }
tokio = { version = "1.39.1", features = ["full"] }
tokio-stream = "0.1.15"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
