[package]
name = "slang-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = "0.9.3"
clap = { version = "4.5.17", features = ["derive"] }
color-eyre = "0.6.3"
futures-util = "0.3.30"
miette = { version = "7.2.0", features = ["fancy"] }
mime_guess = "2.0.5"
rust-embed = "8.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
slang.workspace = true
# smtlib = "0.2.0"
smtlib = { git = "https://github.com/oeb25/smtlib-rs", version = "0.2.0" }
tapi = { git = "https://github.com/oeb25/tapi", features = ["endpoints"] }
thiserror = "1.0.63"
# tapi = { path = "../../../Checkr/tapi/crates/tapi", version = "0.1.0", features = [
#     "endpoints",
# ] }
tokio = { version = "1.39.1", features = ["full"] }
tokio-stream = "0.1.15"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
