[package]
name = "slang-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
axum-extra = "0.10.1"
clap = { version = "4.5.47", features = ["derive"] }
color-eyre = "0.6.5"
futures-util = "0.3.31"
glob = "0.3.3"
itertools = "0.14.0"
miette = { version = "7.6.0", features = ["fancy", "serde"] }
mime_guess = "2.0.5"
open = "5.3.2"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
slang.workspace = true
smtlib.workspace = true
tapi = { git = "https://github.com/oeb25/tapi", features = ["endpoints"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
tracing-test = "0.2.5"
