[package]
name = "slang"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.2.6"
itertools = "0.13.0"
lalrpop-util = { version = "0.21.0", features = ["lexer"] }
miette = "7.2.0"
once_cell = "1.19.0"
proptest = "1.5.0"
strsim = "0.11.1"
thiserror = "1.0.63"
tracing = "0.1.40"
smtlib = { git = "https://github.com/oeb25/smtlib-rs", version = "0.2.0" }

[build-dependencies]
lalrpop = "0.21.0"
