[package]
name = "slang"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.2.6"
itertools = "0.14.0"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
miette = "7.6.0"
once_cell = "1.21.3"
proptest = "1.7.0"
strsim = "0.11.1"
thiserror = "2.0.16"
tracing = "0.1.41"
smtlib.workspace = true

[build-dependencies]
lalrpop = "0.22.2"
